; ModuleID = '/home/carl/AnghaBench/mpv/audio/extr_format.c_af_fmt_to_str.c'
source_filename = "/home/carl/AnghaBench/mpv/audio/extr_format.c_af_fmt_to_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"u8\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"s16\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"s32\00", align 1
@.str.3 = private unnamed_addr constant [4 x i8] c"s64\00", align 1
@.str.4 = private unnamed_addr constant [6 x i8] c"float\00", align 1
@.str.5 = private unnamed_addr constant [7 x i8] c"double\00", align 1
@.str.6 = private unnamed_addr constant [4 x i8] c"u8p\00", align 1
@.str.7 = private unnamed_addr constant [5 x i8] c"s16p\00", align 1
@.str.8 = private unnamed_addr constant [5 x i8] c"s32p\00", align 1
@.str.9 = private unnamed_addr constant [5 x i8] c"s64p\00", align 1
@.str.10 = private unnamed_addr constant [7 x i8] c"floatp\00", align 1
@.str.11 = private unnamed_addr constant [8 x i8] c"doublep\00", align 1
@.str.12 = private unnamed_addr constant [10 x i8] c"spdif-aac\00", align 1
@.str.13 = private unnamed_addr constant [10 x i8] c"spdif-ac3\00", align 1
@.str.14 = private unnamed_addr constant [10 x i8] c"spdif-dts\00", align 1
@.str.15 = private unnamed_addr constant [12 x i8] c"spdif-dtshd\00", align 1
@.str.16 = private unnamed_addr constant [11 x i8] c"spdif-eac3\00", align 1
@.str.17 = private unnamed_addr constant [10 x i8] c"spdif-mp3\00", align 1
@.str.18 = private unnamed_addr constant [13 x i8] c"spdif-truehd\00", align 1
@.str.19 = private unnamed_addr constant [3 x i8] c"??\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @af_fmt_to_str(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %24 [
    i32 129, label %5
    i32 142, label %6
    i32 140, label %7
    i32 138, label %8
    i32 144, label %9
    i32 146, label %10
    i32 128, label %11
    i32 141, label %12
    i32 139, label %13
    i32 137, label %14
    i32 143, label %15
    i32 145, label %16
    i32 136, label %17
    i32 135, label %18
    i32 134, label %19
    i32 133, label %20
    i32 132, label %21
    i32 131, label %22
    i32 130, label %23
  ]

5:                                                ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %25

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %25

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %25

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i64 0, i64 0), i8** %2, align 8
  br label %25

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.4, i64 0, i64 0), i8** %2, align 8
  br label %25

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.5, i64 0, i64 0), i8** %2, align 8
  br label %25

11:                                               ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.6, i64 0, i64 0), i8** %2, align 8
  br label %25

12:                                               ; preds = %1
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.7, i64 0, i64 0), i8** %2, align 8
  br label %25

13:                                               ; preds = %1
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.8, i64 0, i64 0), i8** %2, align 8
  br label %25

14:                                               ; preds = %1
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.9, i64 0, i64 0), i8** %2, align 8
  br label %25

15:                                               ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.10, i64 0, i64 0), i8** %2, align 8
  br label %25

16:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.11, i64 0, i64 0), i8** %2, align 8
  br label %25

17:                                               ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.12, i64 0, i64 0), i8** %2, align 8
  br label %25

18:                                               ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.13, i64 0, i64 0), i8** %2, align 8
  br label %25

19:                                               ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.14, i64 0, i64 0), i8** %2, align 8
  br label %25

20:                                               ; preds = %1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.15, i64 0, i64 0), i8** %2, align 8
  br label %25

21:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.16, i64 0, i64 0), i8** %2, align 8
  br label %25

22:                                               ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.17, i64 0, i64 0), i8** %2, align 8
  br label %25

23:                                               ; preds = %1
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.18, i64 0, i64 0), i8** %2, align 8
  br label %25

24:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.19, i64 0, i64 0), i8** %2, align 8
  br label %25

25:                                               ; preds = %24, %23, %22, %21, %20, %19, %18, %17, %16, %15, %14, %13, %12, %11, %10, %9, %8, %7, %6, %5
  %26 = load i8*, i8** %2, align 8
  ret i8* %26
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
